--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.heml">About</a></li>
-							<li><a href="home-2.html">Work</a></li>
+							<li><a href="home-2.html">Portfolio</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
